# uv-monorepo

./: pyproject.toml
notebooks/: notebook.ipynb
src/api/: api_printer.py  main.py  pyproject.toml
src/api/src/api/: api_printer.py  main.py
src/domain/: domain_printer.py  pyproject.toml
