[project]
name = "uv-monorepo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

[tool.uv]
dev-dependencies = ["jupyter==1.1.1"]

[tool.uv.workspace]
members = ["src/domain"]

[tool.uv.sources]
domain = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# [tool.hatch.build.targets.wheel]
# packages = ["src/domain"]
